add new tracking

--- a/op_rewards_tracking/op_incentive_program_summary.ipynb
+++ b/op_rewards_tracking/op_incentive_program_summary.ipynb
@@ -2,14 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pandas.api.types import CategoricalDtype\n",
     "from datetime import datetime, timedelta\n",
-    "from utils import format_number"
+    "from utils import format_number\n",
+    "\n",
+    "from config import LAST_N_DAYS, INCENTIVE_PROGRAMS_ONLY, COL_NAMES_TO_INCLUDE\n",
+    "\n",
+    "pd.options.display.float_format = \"{:,.2f}\".format\n",
+    "\n"
    ]
   },
   {
@@ -18,9 +23,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set parameters\n",
-    "LAST_N_DAYS = 30\n",
-    "INCENTIVE_PROGRAMS_ONLY = True"
+    "def extract_source(source_string):\n",
+    "    source_list = source_string.split(\"-\")\n",
+    "    if len(source_list) > 1:\n",
+    "        return source_list[1].strip()  # strip() is used to remove any leading/trailing spaces\n",
+    "    else:\n",
+    "        return source_string.strip()\n",
+    "    \n",
+    "def cleanup_string(source_string):\n",
+    "    return source_string.replace(\" \", \"\").lower()"
    ]
   },
   {
@@ -270,7 +281,8 @@
     "\n",
     "\n",
     "# clean up for columns needed\n",
-    "df_info = df_info[[\"Source\",\"Status\",\"# OP Allocated\",\"App Name\",\"announced_date\", \"End Date\"]]\n",
+    "df_info = df_info[[\"Source\",\"Status\",\"# OP Allocated\",\"App Name\",\"announced_date\", \"End Date\", \"App Name Map Override\"]]\n",
+    "\n",
     "summary = pd.pivot_table(df_info, values=[\"# OP Allocated\", \"App Name\"], index=[\"Status\", \"Source\"], \\\n",
     "    aggfunc={\"# OP Allocated\":\"sum\", \"App Name\":\"count\"})\n",
     "\n",
@@ -293,7 +305,7 @@
     "result[\"% OP Allocated\"].fillna(\"-\", inplace=True)\n",
     "\n",
     "result = result.replace((0, \"0.0M\"), \"-\")\n",
-    "display(result.drop(columns=[\"# OP Allocated\", \"App Name\"]))"
+    "display(result.drop(columns=[\"# OP Allocated\", \"App Name\"]))\n"
    ]
   },
   {
@@ -328,6 +340,7 @@
        "      <th>App Name</th>\n",
        "      <th>announced_date</th>\n",
        "      <th>End Date</th>\n",
+       "      <th>App Name Map Override</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -339,6 +352,7 @@
        "      <td>Sushiswap</td>\n",
        "      <td>2023-03-03</td>\n",
        "      <td>-</td>\n",
+       "      <td>Sushi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -348,6 +362,7 @@
        "      <td>Angle</td>\n",
        "      <td>2023-02-20</td>\n",
        "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>92</th>\n",
@@ -357,6 +372,7 @@
        "      <td>WardenSwap</td>\n",
        "      <td>2023-02-17</td>\n",
        "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>67</th>\n",
@@ -366,6 +382,7 @@
        "      <td>Rainbow Wallet</td>\n",
        "      <td>2023-02-13</td>\n",
        "      <td>-</td>\n",
+       "      <td>Rainbow</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -378,11 +395,11 @@
        "92  Governance - Season 1  Live ‎🔥          300000      WardenSwap   \n",
        "67  Governance - Season 2  Live ‎🔥          420069  Rainbow Wallet   \n",
        "\n",
-       "   announced_date End Date  \n",
-       "80     2023-03-03        -  \n",
-       "8      2023-02-20        -  \n",
-       "92     2023-02-17        -  \n",
-       "67     2023-02-13        -  "
+       "   announced_date End Date App Name Map Override  \n",
+       "80     2023-03-03        -                 Sushi  \n",
+       "8      2023-02-20        -                   NaN  \n",
+       "92     2023-02-17        -                   NaN  \n",
+       "67     2023-02-13        -               Rainbow  "
       ]
      },
      "metadata": {},
@@ -404,10 +421,373 @@
    "outputs": [],
    "source": [
     "# display completed programs in last 30 days\n",
-    "df_completed = df_info[(df_info['Status'] == 'Completed') & (df_info['End Date']>pd.Timestamp('today') - timedelta(days = LAST_N_DAYS))]\\\n",
-    "        .sort_values(by='announced_date', ascending=False)\n",
+    "df_completed = df_info[(df_info[\"Status\"] == \"Completed\") & (df_info[\"End Date\"]>pd.Timestamp(\"today\") - timedelta(days = LAST_N_DAYS))]\\\n",
+    "        .sort_values(by=\"announced_date\", ascending=False)\n",
     "if not df_completed.empty:\n",
     "        display(df_completed)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Usage and TVL Attribution\n",
+    "To combine all sources of data together"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `DF_INFO` Cleanup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create app_name_join, coalesce with app name override map, app name and remove any space\n",
+    "df_info[\"app_name_join\"] = df_info[\"App Name Map Override\"].fillna(df_info[\"App Name\"])\n",
+    "df_info[\"app_name_join\"] = df_info[\"app_name_join\"].apply(cleanup_string)\n",
+    "\n",
+    "# apply the function to the \"Source\" column and create a new column \"Source Extracted\"\n",
+    "df_info[\"source_cleanup\"] = df_info[\"Source\"].apply(extract_source)\n",
+    "df_info[\"source_cleanup\"] = df_info[\"source_cleanup\"].apply(cleanup_string)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `DF_USAGE` Cleanup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_usage = pd.read_csv(\"csv_outputs/\" + \"dune_op_program_performance_summary_sybil_oracle_excl\" + \".csv\")\n",
+    "df_usage[\"app_name_join\"] = df_usage[\"app_name\"].apply(cleanup_string)\n",
+    "df_usage[\"source_cleanup\"] = df_usage[\"op_source\"].apply(cleanup_string)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Combine Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_combined = pd.merge(df_info, df_usage, on=[\"app_name_join\", \"source_cleanup\"])\n",
+    "df_combined = df_combined[COL_NAMES_TO_INCLUDE]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg_dict = {\n",
+    "    \"incremental_addr_per_day\": \"sum\",\n",
+    "    \"incremental_txs_per_day\": \"sum\",\n",
+    "    \"incremental_gas_fee_eth_per_day\": \"sum\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>incremental_addr_per_day</th>\n",
+       "      <th>incremental_txs_per_day</th>\n",
+       "      <th>incremental_gas_fee_eth_per_day</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Source</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Governance - Phase 0</th>\n",
+       "      <td>5,305.49</td>\n",
+       "      <td>8,586.90</td>\n",
+       "      <td>38.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Governance - Season 1</th>\n",
+       "      <td>964.22</td>\n",
+       "      <td>2,789.47</td>\n",
+       "      <td>8.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Governance - Season 2</th>\n",
+       "      <td>2,493.62</td>\n",
+       "      <td>2,196.67</td>\n",
+       "      <td>19.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Partner Fund</th>\n",
+       "      <td>1,468.03</td>\n",
+       "      <td>5,696.72</td>\n",
+       "      <td>9.71</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       incremental_addr_per_day  incremental_txs_per_day  \\\n",
+       "Source                                                                     \n",
+       "Governance - Phase 0                   5,305.49                 8,586.90   \n",
+       "Governance - Season 1                    964.22                 2,789.47   \n",
+       "Governance - Season 2                  2,493.62                 2,196.67   \n",
+       "Partner Fund                           1,468.03                 5,696.72   \n",
+       "\n",
+       "                       incremental_gas_fee_eth_per_day  \n",
+       "Source                                                  \n",
+       "Governance - Phase 0                             38.83  \n",
+       "Governance - Season 1                             8.53  \n",
+       "Governance - Season 2                            19.45  \n",
+       "Partner Fund                                      9.71  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_fund_source = df_combined.groupby(\"Source\").agg(agg_dict)\n",
+    "result_fund_source.sort_values(\"Source\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>incremental_addr_per_day</th>\n",
+       "      <th>incremental_txs_per_day</th>\n",
+       "      <th>incremental_gas_fee_eth_per_day</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>category</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>DEX (Decentralized Exchange)</th>\n",
+       "      <td>2,983.35</td>\n",
+       "      <td>9,405.71</td>\n",
+       "      <td>32.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yield Aggregator</th>\n",
+       "      <td>2,225.84</td>\n",
+       "      <td>3,000.27</td>\n",
+       "      <td>2.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cross-Chain / Bridging</th>\n",
+       "      <td>937.23</td>\n",
+       "      <td>2,437.79</td>\n",
+       "      <td>6.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Perpetuals, Synthetic Assets</th>\n",
+       "      <td>1,008.96</td>\n",
+       "      <td>2,037.23</td>\n",
+       "      <td>27.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Options</th>\n",
+       "      <td>637.10</td>\n",
+       "      <td>1,053.16</td>\n",
+       "      <td>0.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CDP</th>\n",
+       "      <td>291.14</td>\n",
+       "      <td>920.21</td>\n",
+       "      <td>3.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lend/Borrow Market</th>\n",
+       "      <td>461.05</td>\n",
+       "      <td>831.53</td>\n",
+       "      <td>2.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DEX (Decentralized Exchange), Wallet / Tracker</th>\n",
+       "      <td>139.81</td>\n",
+       "      <td>550.53</td>\n",
+       "      <td>0.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Asset Management</th>\n",
+       "      <td>100.48</td>\n",
+       "      <td>162.79</td>\n",
+       "      <td>0.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stablecoin</th>\n",
+       "      <td>18.26</td>\n",
+       "      <td>29.23</td>\n",
+       "      <td>0.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DAO</th>\n",
+       "      <td>18.85</td>\n",
+       "      <td>21.87</td>\n",
+       "      <td>0.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other DeFi</th>\n",
+       "      <td>8.21</td>\n",
+       "      <td>14.45</td>\n",
+       "      <td>0.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NFT Collection</th>\n",
+       "      <td>7.08</td>\n",
+       "      <td>6.63</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Perpetuals</th>\n",
+       "      <td>1,393.99</td>\n",
+       "      <td>-1,201.65</td>\n",
+       "      <td>-2.08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                incremental_addr_per_day  \\\n",
+       "category                                                                   \n",
+       "DEX (Decentralized Exchange)                                    2,983.35   \n",
+       "Yield Aggregator                                                2,225.84   \n",
+       "Cross-Chain / Bridging                                            937.23   \n",
+       "Perpetuals, Synthetic Assets                                    1,008.96   \n",
+       "Options                                                           637.10   \n",
+       "CDP                                                               291.14   \n",
+       "Lend/Borrow Market                                                461.05   \n",
+       "DEX (Decentralized Exchange), Wallet / Tracker                    139.81   \n",
+       "Asset Management                                                  100.48   \n",
+       "Stablecoin                                                         18.26   \n",
+       "DAO                                                                18.85   \n",
+       "Other DeFi                                                          8.21   \n",
+       "NFT Collection                                                      7.08   \n",
+       "Perpetuals                                                      1,393.99   \n",
+       "\n",
+       "                                                incremental_txs_per_day  \\\n",
+       "category                                                                  \n",
+       "DEX (Decentralized Exchange)                                   9,405.71   \n",
+       "Yield Aggregator                                               3,000.27   \n",
+       "Cross-Chain / Bridging                                         2,437.79   \n",
+       "Perpetuals, Synthetic Assets                                   2,037.23   \n",
+       "Options                                                        1,053.16   \n",
+       "CDP                                                              920.21   \n",
+       "Lend/Borrow Market                                               831.53   \n",
+       "DEX (Decentralized Exchange), Wallet / Tracker                   550.53   \n",
+       "Asset Management                                                 162.79   \n",
+       "Stablecoin                                                        29.23   \n",
+       "DAO                                                               21.87   \n",
+       "Other DeFi                                                        14.45   \n",
+       "NFT Collection                                                     6.63   \n",
+       "Perpetuals                                                    -1,201.65   \n",
+       "\n",
+       "                                                incremental_gas_fee_eth_per_day  \n",
+       "category                                                                         \n",
+       "DEX (Decentralized Exchange)                                              32.83  \n",
+       "Yield Aggregator                                                           2.32  \n",
+       "Cross-Chain / Bridging                                                     6.81  \n",
+       "Perpetuals, Synthetic Assets                                              27.69  \n",
+       "Options                                                                    0.64  \n",
+       "CDP                                                                        3.46  \n",
+       "Lend/Borrow Market                                                         2.68  \n",
+       "DEX (Decentralized Exchange), Wallet / Tracker                             0.39  \n",
+       "Asset Management                                                           0.66  \n",
+       "Stablecoin                                                                 0.69  \n",
+       "DAO                                                                        0.20  \n",
+       "Other DeFi                                                                 0.18  \n",
+       "NFT Collection                                                             0.05  \n",
+       "Perpetuals                                                                -2.08  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_fund_source = df_combined.groupby(\"category\").agg(agg_dict)\n",
+    "result_fund_source.sort_values(\"incremental_txs_per_day\", ascending=False)"
    ]
   }
  ],
