--- a/op_rewards_tracking/op_incentives_program_attribution.ipynb
+++ b/op_rewards_tracking/op_incentives_program_attribution.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "tvl = pd.read_csv('csv_outputs/op_summer_latest_stats.csv')\n",
     "distrib_df = pd.read_csv('csv_outputs/dune_op_distribution_type.csv')\n",
-    "program_df = pd.read_csv('inputs/OP Summer Programs [Public].csv')"
+    "program_df = pd.read_csv('inputs/op_incentive_program_info.csv')"
    ]
   },
   {
