--- a/op_rewards_tracking/pull_dune_data.ipynb
+++ b/op_rewards_tracking/pull_dune_data.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import os\n",
     "sys.path.append('../helper_functions')\n",
     "import duneapi_utils as d"
    ]
@@ -19,8 +20,9 @@
    "source": [
     "# add any data to pull here\n",
     "data = {\n",
-    "    1886707: \"dune_op_distribution_type\",\n",
-    "    1900056: \"dune_op_distribution\"\n",
+    "    # 1886707: \"dune_op_distribution_type\",\n",
+    "    # 1900056: \"dune_op_distribution\",\n",
+    "    2199844: \"dune_usage_by_app\"\n",
     "}"
    ]
   },
@@ -30,6 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if not os.path.exists(\"csv_outputs\"):\n",
+    "        os.mkdir(\"csv_outputs\")\n",
     "for query_id, csv_name in data.items():\n",
     "    d.get_dune_data(query_id, csv_name)"
    ]
@@ -51,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
