--- a/op_rewards_tracking/op_incentive_program_summary.ipynb
+++ b/op_rewards_tracking/op_incentive_program_summary.ipynb
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1080,6 +1080,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Source</th>\n",
        "      <th># OP Allocated</th>\n",
        "      <th>net_op_deployed</th>\n",
        "      <th>incremental_addr_per_day</th>\n",
@@ -1091,23 +1092,11 @@
        "      <th>incremental_gas_annualized_per_op</th>\n",
        "      <th>net_tvl_per_op</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Source</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Governance - Phase 0</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Governance - Phase 0</td>\n",
        "      <td>28,800,000.00</td>\n",
        "      <td>20,825,762.00</td>\n",
        "      <td>8,621.51</td>\n",
@@ -1120,7 +1109,8 @@
        "      <td>9.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Governance - Season 1</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Governance - Season 1</td>\n",
        "      <td>3,300,000.00</td>\n",
        "      <td>1,763,165.00</td>\n",
        "      <td>1,235.87</td>\n",
@@ -1133,7 +1123,8 @@
        "      <td>62.78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Governance - Season 2</th>\n",
+       "      <th>2</th>\n",
+       "      <td>Governance - Season 2</td>\n",
        "      <td>1,490,000.00</td>\n",
        "      <td>906,065.00</td>\n",
        "      <td>260.38</td>\n",
@@ -1146,20 +1137,8 @@
        "      <td>19.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Governance - Season 3</th>\n",
-       "      <td>200,000.00</td>\n",
-       "      <td>791,082.00</td>\n",
-       "      <td>774.49</td>\n",
-       "      <td>4,110.26</td>\n",
-       "      <td>3.96</td>\n",
-       "      <td>-1,094,191.82</td>\n",
-       "      <td>0.36</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-1.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Partner Fund</th>\n",
+       "      <th>4</th>\n",
+       "      <td>Partner Fund</td>\n",
        "      <td>5,000,000.00</td>\n",
        "      <td>4,820,781.00</td>\n",
        "      <td>1,199.02</td>\n",
@@ -1176,64 +1155,38 @@
        "</div>"
       ],
       "text/plain": [
-       "                       # OP Allocated  net_op_deployed  \\\n",
-       "Source                                                   \n",
-       "Governance - Phase 0    28,800,000.00    20,825,762.00   \n",
-       "Governance - Season 1    3,300,000.00     1,763,165.00   \n",
-       "Governance - Season 2    1,490,000.00       906,065.00   \n",
-       "Governance - Season 3      200,000.00       791,082.00   \n",
-       "Partner Fund             5,000,000.00     4,820,781.00   \n",
+       "                  Source  # OP Allocated  net_op_deployed  \\\n",
+       "0   Governance - Phase 0   28,800,000.00    20,825,762.00   \n",
+       "1  Governance - Season 1    3,300,000.00     1,763,165.00   \n",
+       "2  Governance - Season 2    1,490,000.00       906,065.00   \n",
+       "4           Partner Fund    5,000,000.00     4,820,781.00   \n",
        "\n",
-       "                       incremental_addr_per_day  incremental_txs_per_day  \\\n",
-       "Source                                                                     \n",
-       "Governance - Phase 0                   8,621.51                 9,719.46   \n",
-       "Governance - Season 1                  1,235.87                 3,353.81   \n",
-       "Governance - Season 2                    260.38                   685.12   \n",
-       "Governance - Season 3                    774.49                 4,110.26   \n",
-       "Partner Fund                           1,199.02                 3,122.79   \n",
+       "   incremental_addr_per_day  incremental_txs_per_day  \\\n",
+       "0                  8,621.51                 9,719.46   \n",
+       "1                  1,235.87                 3,353.81   \n",
+       "2                    260.38                   685.12   \n",
+       "4                  1,199.02                 3,122.79   \n",
        "\n",
-       "                       incremental_gas_fee_eth_per_day  \\\n",
-       "Source                                                   \n",
-       "Governance - Phase 0                             67.94   \n",
-       "Governance - Season 1                            10.18   \n",
-       "Governance - Season 2                             2.43   \n",
-       "Governance - Season 3                             3.96   \n",
-       "Partner Fund                                      4.15   \n",
+       "   incremental_gas_fee_eth_per_day  cumul_last_price_net_dollar_flow  \\\n",
+       "0                            67.94                    203,509,034.14   \n",
+       "1                            10.18                    110,691,311.52   \n",
+       "2                             2.43                     17,780,032.12   \n",
+       "4                             4.15                     77,329,625.73   \n",
        "\n",
-       "                       cumul_last_price_net_dollar_flow  \\\n",
-       "Source                                                    \n",
-       "Governance - Phase 0                     203,509,034.14   \n",
-       "Governance - Season 1                    110,691,311.52   \n",
-       "Governance - Season 2                     17,780,032.12   \n",
-       "Governance - Season 3                     -1,094,191.82   \n",
-       "Partner Fund                              77,329,625.73   \n",
+       "   incremental_addr_annualized_per_op  incremental_txs_annualized_per_op  \\\n",
+       "0                                0.15                               0.17   \n",
+       "1                                0.26                               0.69   \n",
+       "2                                0.10                               0.28   \n",
+       "4                                0.09                               0.24   \n",
        "\n",
-       "                       incremental_addr_annualized_per_op  \\\n",
-       "Source                                                      \n",
-       "Governance - Phase 0                                 0.15   \n",
-       "Governance - Season 1                                0.26   \n",
-       "Governance - Season 2                                0.10   \n",
-       "Governance - Season 3                                0.36   \n",
-       "Partner Fund                                         0.09   \n",
-       "\n",
-       "                       incremental_txs_annualized_per_op  \\\n",
-       "Source                                                     \n",
-       "Governance - Phase 0                                0.17   \n",
-       "Governance - Season 1                               0.69   \n",
-       "Governance - Season 2                               0.28   \n",
-       "Governance - Season 3                               1.90   \n",
-       "Partner Fund                                        0.24   \n",
-       "\n",
-       "                       incremental_gas_annualized_per_op  net_tvl_per_op  \n",
-       "Source                                                                    \n",
-       "Governance - Phase 0                                0.00            9.77  \n",
-       "Governance - Season 1                               0.00           62.78  \n",
-       "Governance - Season 2                               0.00           19.62  \n",
-       "Governance - Season 3                               0.00           -1.38  \n",
-       "Partner Fund                                        0.00           16.04  "
+       "   incremental_gas_annualized_per_op  net_tvl_per_op  \n",
+       "0                               0.00            9.77  \n",
+       "1                               0.00           62.78  \n",
+       "2                               0.00           19.62  \n",
+       "4                               0.00           16.04  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,7 +1199,8 @@
     "\n",
     "# calculate metrics\n",
     "result_fund_source = calculate_metrics(result_fund_source)\n",
-    "result_fund_source"
+    "result_fund_source = result_fund_source.reset_index()\n",
+    "result_fund_source[result_fund_source[\"Source\"] != \"Governance - Season 3\"]"
    ]
   },
   {
