--- a/op_rewards_tracking/op_incentive_program_summary.ipynb
+++ b/op_rewards_tracking/op_incentive_program_summary.ipynb
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1136,20 +1136,6 @@
        "      <td>0.00</td>\n",
        "      <td>19.62</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Partner Fund</td>\n",
-       "      <td>5,000,000.00</td>\n",
-       "      <td>4,820,781.00</td>\n",
-       "      <td>1,199.02</td>\n",
-       "      <td>3,122.79</td>\n",
-       "      <td>4.15</td>\n",
-       "      <td>77,329,625.73</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>16.04</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1159,34 +1145,29 @@
        "0   Governance - Phase 0   28,800,000.00    20,825,762.00   \n",
        "1  Governance - Season 1    3,300,000.00     1,763,165.00   \n",
        "2  Governance - Season 2    1,490,000.00       906,065.00   \n",
-       "4           Partner Fund    5,000,000.00     4,820,781.00   \n",
        "\n",
        "   incremental_addr_per_day  incremental_txs_per_day  \\\n",
        "0                  8,621.51                 9,719.46   \n",
        "1                  1,235.87                 3,353.81   \n",
        "2                    260.38                   685.12   \n",
-       "4                  1,199.02                 3,122.79   \n",
        "\n",
        "   incremental_gas_fee_eth_per_day  cumul_last_price_net_dollar_flow  \\\n",
        "0                            67.94                    203,509,034.14   \n",
        "1                            10.18                    110,691,311.52   \n",
        "2                             2.43                     17,780,032.12   \n",
-       "4                             4.15                     77,329,625.73   \n",
        "\n",
        "   incremental_addr_annualized_per_op  incremental_txs_annualized_per_op  \\\n",
        "0                                0.15                               0.17   \n",
        "1                                0.26                               0.69   \n",
        "2                                0.10                               0.28   \n",
-       "4                                0.09                               0.24   \n",
        "\n",
        "   incremental_gas_annualized_per_op  net_tvl_per_op  \n",
        "0                               0.00            9.77  \n",
        "1                               0.00           62.78  \n",
-       "2                               0.00           19.62  \n",
-       "4                               0.00           16.04  "
+       "2                               0.00           19.62  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,7 +1181,7 @@
     "# calculate metrics\n",
     "result_fund_source = calculate_metrics(result_fund_source)\n",
     "result_fund_source = result_fund_source.reset_index()\n",
-    "result_fund_source[result_fund_source[\"Source\"] != \"Governance - Season 3\"]"
+    "result_fund_source[~result_fund_source[\"Source\"].isin([\"Governance - Season 3\", \"Partner Fund\"])]\n"
    ]
   },
   {
